--- a/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
+++ b/src/IssueViz/IssueVisualizationControl/IssueVisualizationControl.xaml
@@ -44,15 +44,18 @@
             <Setter Property="FontWeight" Value="{DynamicResource {x:Static vsShell:VsFonts.EnvironmentBoldFontWeightKey}}"/>
         </Style>
 
-        <Style x:Key="BaseShapeStyle" TargetType="Shape">
-            <Setter Property="Fill" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBackgroundKey}}"/>
-            <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBorderKey}}"/>
+        <Style x:Key="StepBorderStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBorderKey}}"/>
+            <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.ComboBoxBackgroundKey}}"/>
+            <Setter Property="CornerRadius" Value="2"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Padding" Value="4,0,4,0"/>
             <Style.Triggers>
                 <DataTrigger Binding="{Binding Path=IsMouseOver, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True">
-                    <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Path=IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListViewItem}}}" Value="True">
-                    <Setter Property="Stroke" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.StartPageButtonPinHoverKey}}"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -102,12 +105,6 @@
 
         <Style x:Key="IssueDescriptionDockPanelStyle" TargetType="DockPanel">
             <Setter Property="Margin" Value="5"/>
-        </Style>
-
-        <Style x:Key="StepNumberRectangleStyle" TargetType="Rectangle" BasedOn="{StaticResource BaseShapeStyle}">
-            <Setter Property="RadiusX" Value="1"/>
-            <Setter Property="RadiusY" Value="1"/>
-            <Setter Property="StrokeThickness" Value="1"/>
         </Style>
 
         <Style x:Key="LocationsListViewItemStyle" TargetType="ListViewItem">
@@ -266,15 +263,16 @@
                                 <ColumnDefinition Name="Description" Width="*"/>
                                 <ColumnDefinition Name="NonNavigableWarningIcon" Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <Viewbox Grid.Column="0" Width="14" Height="14" Margin="5,0,0,0">
-                                <Grid Width="16" Height="16">
-                                    <Rectangle Style="{StaticResource StepNumberRectangleStyle}"/>
-                                    <TextBlock Style="{StaticResource BaseNumberInShapeTextBlockStyle}" Text="{Binding Location.StepNumber}" />
-                                </Grid>
+                            <Viewbox Grid.Column="0" Height="16" Stretch="UniformToFill" StretchDirection="DownOnly" Margin="5,0,0,0">
+                                <Border Style="{StaticResource StepBorderStyle}">
+                                    <TextBlock Style="{StaticResource BaseNumberInShapeTextBlockStyle}" Text="{Binding Location.Label}" />
+                                </Border>
                             </Viewbox>
                             <TextBlock Grid.Column="1" 
-                                       Style="{StaticResource BaseLocationItemTextBlockStyle}" 
-                                       Text="{Binding Location.Location.Message}"/>
+                                       Style="{StaticResource BaseLocationItemTextBlockStyle}">
+                                <Run Text="{Binding DisplayMessage, Mode=OneTime}"/>
+                                <Run Text="{Binding LineNumber, StringFormat=(line {0}), Mode=OneWay}"/>
+                            </TextBlock>
                             <vsImaging:CrispImage Grid.Column="2"
                                                 Height="16" Width="16"
                                                 Moniker="{x:Static vsCatalog:KnownMonikers.DocumentWarning}" 
