--- a/src/IssueViz.Security/HotspotsControl/HotspotsControl.xaml
+++ b/src/IssueViz.Security/HotspotsControl/HotspotsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SonarLint.VisualStudio.IssueVisualization.Hotspots.HotspotsControl.HotspotsControl"
+﻿<UserControl x:Class="SonarLint.VisualStudio.IssueVisualization.Security.HotspotsControl.HotspotsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vsShell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.14.0"
