--- a/src/IssueViz.Security/HotspotsControl/HotspotsControl.xaml
+++ b/src/IssueViz.Security/HotspotsControl/HotspotsControl.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="SonarLint.VisualStudio.IssueVisualization.Security.HotspotsControl.HotspotsControl"
+             x:ClassModifier="internal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             DataContext="{Binding ViewModel, RelativeSource={RelativeSource Mode=Self}}" x:ClassModifier="internal">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid UseLayoutRounding="True">
         <Border x:Name="hotspotsList" />
     </Grid>
